<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddGoogleMapsPlaceActivity">
    
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_addPlace"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primary_background_color"
        android:theme="@style/custom_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ScrollView
        android:id="@+id/sv_addPlaceActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_addPlace"
        app:layout_constraintBottom_toBottomOf="parent"
        android:fillViewport="true">
        
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/add_place_scroll_view_child_padding">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textColorHint="@color/primary_text_color">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_title"
                    android:inputType="textCapWords"
                    android:textColor="@color/primary_text_color"
                    android:textSize="@dimen/edit_text_user_input_text_size"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_title"
                android:textColorHint="@color/primary_text_color"
                android:layout_marginTop="@dimen/scroll_view_child_views_margin_top">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_description"
                    android:inputType="textCapWords"
                    android:textColor="@color/primary_text_color"
                    android:textSize="@dimen/edit_text_user_input_text_size"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_description"
                android:textColorHint="@color/primary_text_color"
                android:layout_marginTop="@dimen/scroll_view_child_views_margin_top">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_date"
                    android:inputType="text"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:textColor="@color/primary_text_color"
                    android:textSize="@dimen/edit_text_user_input_text_size"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_date"
                android:textColorHint="@color/primary_text_color"
                android:layout_marginTop="@dimen/scroll_view_child_views_margin_top">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_location"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="textCapWords"
                    android:textColor="@color/primary_text_color"
                    android:textSize="@dimen/edit_text_user_input_text_size"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_getCurrLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_location"
                app:layout_constraintBottom_toTopOf="@id/iv_addImageToPlace"
                android:layout_marginTop="5dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:text="GET CURRENT LOCATION"
                android:textSize="17sp"
                android:textStyle="bold"
                android:textColor="@color/primary_text_color"
                android:background="@drawable/ripple_effect"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_addImageToPlace"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/add_image_round_border"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_no_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_getCurrLocation" />

            <TextView
                android:id="@+id/btn_addImage"
                android:layout_width="180dp"
                android:layout_height="180dp"
                app:layout_constraintStart_toEndOf="@id/iv_addImageToPlace"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_getCurrLocation"
                android:layout_marginTop="25dp"
                android:text="@string/add_image"
                android:textStyle="bold"
                android:textSize="25sp"
                android:textColor="@color/primary_text_color"
                android:background="?attr/selectableItemBackground"
                android:gravity="center"/>

            <Button
                android:id="@+id/btn_savePlace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_addImage"
                android:text="@string/save"
                android:textStyle="bold"
                android:textSize="25sp"
                android:textColor="@color/primary_text_color"
                android:backgroundTint="@color/primary_background_color"
                android:background="@drawable/btn_save_round_background"
                android:layout_marginTop="25dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>